--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -68,13 +68,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 175,
+      "execution_count": 177,
       "metadata": {
         "id": "FVYwaObI8DC1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cfb7c622-0df4-463d-be77-3fdfa9ef3da6"
+        "outputId": "cc8f2895-697d-4721-ed46-d523b419695c"
       },
       "outputs": [
         {
@@ -96,22 +96,27 @@
         "drive.mount('/content/drive')\n",
         "with zipfile.ZipFile('/content/Bike_sharing_dataset.zip', 'r') as z:\n",
         "    z.extractall('/content/')\n",
+        "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "pip freeze requirements.txt"
+        "# Buat file requirements.txt dari library yang terinstal di Colab\n",
+        "!pip freeze > requirements.txt\n",
+        "\n",
+        "# Cek isi file requirements.txt\n",
+        "!cat requirements.txt\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "xS76HvCd4FOg",
-        "outputId": "7f15009a-13de-4196-ee3b-f9ce397bee46"
+        "id": "yZu63DPL__oD",
+        "outputId": "2db91ef4-fa8a-4973-e9b6-ee26fd74711d"
       },
-      "execution_count": 173,
+      "execution_count": 178,
       "outputs": [
         {
           "output_type": "stream",
@@ -646,7 +651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": null,
       "metadata": {
         "id": "zjCBk1BI8DC1",
         "colab": {
@@ -6401,7 +6406,7 @@
         "id": "SlsHEj_ZQRWl",
         "outputId": "cc69d244-2ae8-4c06-d2e1-0479cf865fd3"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6534,7 +6539,7 @@
         "id": "T-eLD3nkP51D",
         "outputId": "21aef6c2-1e8b-428c-b5b4-642ed0127c16"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6579,7 +6584,7 @@
         "id": "g0hgn2YbJdXp",
         "outputId": "6c943ff1-994f-4b1a-c57f-bf55341b4525"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6602,7 +6607,7 @@
         "id": "OsHKhXINKmtI",
         "outputId": "7fe447b1-3f86-455d-e3cb-aaeaf71ba8d3"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6657,7 +6662,7 @@
         "id": "hWQ0YuQzK3C2",
         "outputId": "bfcbd16c-00c3-459c-9d24-8d01546ca852"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6683,7 +6688,7 @@
         "id": "hujhk2FRQ3G2",
         "outputId": "55ed7548-1bd4-4f05-dc1c-7e63c8333c36"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6731,7 +6736,7 @@
         "id": "kt1GFrHfROGH",
         "outputId": "790180c3-9611-4c9f-fe6b-13532be2a131"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7230,7 +7235,7 @@
       "metadata": {
         "id": "jVnYpprE9Evz"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7243,7 +7248,7 @@
       "metadata": {
         "id": "FEG8tXKobiqD"
       },
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7277,7 +7282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": null,
       "metadata": {
         "id": "e9CQCZjk8DC2",
         "colab": {
@@ -7327,7 +7332,7 @@
         "id": "wHpS9A4TZP3-",
         "outputId": "fb86b59a-a5c4-4727-8fc7-061422045e7f"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7371,7 +7376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": null,
       "metadata": {
         "id": "1swJUdAD8DC2",
         "colab": {
@@ -7414,7 +7419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": null,
       "metadata": {
         "id": "Go0lCsvO8DC2",
         "colab": {
@@ -7502,7 +7507,7 @@
         },
         "outputId": "600d7f5e-b184-47fc-cfc2-98150fe6b9e9"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
