--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 60,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -80,9 +80,31 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "import pandas as pd\n",
-        "\n",
-        "\n",
+        "import os\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jKm7ie-EhU-h",
+        "outputId": "7abc50c2-0340-4d00-d864-c5b43d0c2743"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bike_sharing_dataset  drive  sample_data\n"
+          ]
+        }
       ]
     },
     {
